--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1925,6 +1925,8 @@ version 9.21 (2022-01-10)
     * Adds ClaimsSet.equals and hashCode methods.
     * Updates to com.nimbusds:content-type:2.2
 
-version 9.21.1 (2022-01-12)
+version 9.22 (2022-01-12)
+    * Extracts ReadOnlyAuthorizationServerEndpointMetadata interface.
+    * Extracts ReadOnlyAuthorizationServerMetadata interface.
     * Fixes device_authorization_endpoint parsing in OIDCProviderMetadata.parse
       (iss #380).
