Updates to Nimbus JOSE+JWT 9.16.1

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1936,3 +1936,5 @@ version 9.22 (2022-01-12)
 version 9.22.1 (2022-01-21)
     * Updates Birthplace to allow ISO 3166-1 Alpha-3 country codes.
 
+version 9.22.2 (2022-01-25)
+    * Updates to Nimbus JOSE+JWT 9.16.1
