--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1947,3 +1947,5 @@ version 9.23 (2022-02-04)
 
 version 9.24 (2022-02-04)
     * Adds ClientAuthentication.getFormParameterNames method.
+    * CIBARequest.parse must not be include form parameters from the client
+      authentication (e.g. private_key_jwt) into the custom parameters map.
