--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1947,6 +1947,6 @@ version 9.23 (2022-02-04)
 
 version 9.24 (2022-02-04)
     * Adds ClientAuthentication.getFormParameterNames method.
-    * CIBARequest.parse must not be include form parameters from the client
+    * CIBARequest.parse must not include form parameters from the client
       authentication (e.g. private_key_jwt) into the custom parameters map.
     * Updates to Nimbus JOSE+JWT 9.18
