MinimalVerificationSpec.parse must allow trust_framework set to an empty JSON object (iss #385)

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1951,5 +1951,7 @@ version 9.24 (2022-02-04)
       authentication (e.g. private_key_jwt) into the custom parameters map.
     * Updates to Nimbus JOSE+JWT 9.18
 
-version 9.25 (2022-02-09)
+version 9.25 (2022-02-10)
     * Adds OpenID "claims" parameter support to CIBARequest.
+    * MinimalVerificationSpec.parse must allow trust_framework set to an empty
+      JSON object (iss #385).
