--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1963,3 +1963,6 @@ version 9.26 (2022-02-17)
 version 9.27 (2022-02-17)
     * Adds static SectorIDURIValidator.collectURIsForValidation method.
     * Updates SectorIDURIValidator.validate to support CIBA-related URIs.
+
+version 9.27.01 (2022-03-08)
+    * Updates to Nimbus JOSE+JWT 9.21
