--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1966,3 +1966,4 @@ version 9.27 (2022-02-17)
 
 version 9.27.01 (2022-03-08)
     * Updates to Nimbus JOSE+JWT 9.21
+    * Updates to JSON Smart [1.3.3,2.4.8]
