--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1967,3 +1967,5 @@ version 9.27 (2022-02-17)
 version 9.27.01 (2022-03-08)
     * Updates to Nimbus JOSE+JWT 9.21
     * Updates to JSON Smart [1.3.3,2.4.8]
+    * Updates to org.cryptomator:siv-mode:1.4.4
+
