--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1969,3 +1969,5 @@ version 9.27.1 (2022-03-08)
     * Updates to JSON Smart [1.3.3,2.4.8]
     * Updates to org.cryptomator:siv-mode:1.4.4
 
+version 9.28 (2022-03-11)
+    * Adds HTTPRequest.getPoPWithException method.
