Updates CIBARequest to make the scope parameter optional

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1980,3 +1980,6 @@ version 9.30 (2022-03-18)
     * Adds CIBARequest purpose (ekYC-IdA) parameter support.
     * Adds CIBARequest resource (RFC 8707) parameter support.
     * Adds new static ResourceUtils methods.
+
+version 9.31 (2022-03-19)
+    * Updates CIBARequest to make the scope parameter optional.
