AuthorizationServerMetadata adds prompt_values_supported support

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1992,3 +1992,6 @@ version 9.31.1 (2022-03-29)
 version 9.32 (2022-03-29)
     * Updates IDTokenValidator and AbstractJWTValidator to support explicit JWT
       typing via the "typ" (type) header.
+
+version 9.33 (2022-04-23)
+    * AuthorizationServerMetadata adds "prompt_values_supported" support.
