Updates to Nimbus JOSE+JWT 9.23

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2013,3 +2013,4 @@ version 9.36 (2022-05-25)
 
 version 9.37 (2022-05-30)
     * ErrorObject receives support for including custom parameters.
+    * Updates to Nimbus JOSE+JWT 9.23
